@@ -38,8 +38,9 @@ if (!$gallery) {
 	$gallery = new stdClass();
 }
 
-$gallery->version = "1.2.3-cvs-b3";
+$gallery->version = "1.2.3-cvs-b4";
 $gallery->config_version = 26;
 $gallery->album_version = 4;
+$gallery->remote_protocol_version = 1;
 $gallery->url = "http://gallery.sourceforge.net";
 ?>
